Modify example templates

--- a/examples/productdatafeed/bmecat2Csv.twig
+++ b/examples/productdatafeed/bmecat2Csv.twig
@@ -11,7 +11,7 @@
 //      +- getPrice
 //      +- getGtin
 //
-// It is assumed that the templates are located in the workplace/template/twig directory.
+// It is assumed that the templates are located in the workplace/template/twig subdirectory.
 //
 
 set log = utilities.log('INFO')
